added more endpoints
