# src/entities/Proposal/routes.ts
@@ -489,7 +489,7 @@ async function getGrants(): Promise<CategorizedGrants> {
 
 async function getGrantsByUser(req: Request): ReturnType<typeof getGrants> {
   const address = req.params.address
-  const isCoauthoring = req.query.coauthoring === 'true'
+  const isCoauthoring = req.query.coauthor === 'true'
   if (!isEthereumAddress(address)) {
     throw new RequestError('Invalid address', RequestError.BadRequest)
   }
